Thu Jul 25 20:57:20 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_channel_read_line): Fix 
	docs for @str_return to conform to the main docs
	and the implementation as to whether the terminator
	is included. (#87964, Jacob Berkman)

Thu Jul 25 19:52:41 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/guniprop.c (real_tolower): Handle the 
	end of the string properly when max_len is set.
	(#88545, Morten Welinder.) Rename the next_t
	variable to next_type to make cc-mode happy.

	* glib/gconvert.c (g_iconv_open): Fix missing
	label from previous commit.

Thu Jul 25 19:41:03 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_channel_get_flags): Fix 
	incorrect return value in g_return_val_if_fail 
	(#85545, David L. Cooper II)

Thu Jul 25 19:12:43 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_channel_set_encoding): Clarify
	that only one of the conditions listed in the docs
	need to be true, not all of them. (#87176,
	Sebastian Rittau)

	* glib/giochannel.c (g_io_channel_read_line): Fix 
	description of the return value. (#87754, Manuel Clos)

Thu Jul 25 19:02:53 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c (g_timeout_add): Remove reference
	in the docs to @notify parameter. (#87768,
	Manuel Clos)

Thu Jul 25 17:57:07 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gconvert.c (g_iconv_open): Document the
	(GIConv)-1 return value on failure. (#87559, 
	Jarek Dukat)

	* glib/gconvert.c (g_iconv_open): Fix potential
	problems with the assumption that (GIConv)(iconv_t)-1
	is the same as (GIConv)-1.
	
2002-07-15  Matthias Clasen  <maclas@gmx.de>

	* glib/gmarkup.h: 
	* glib/gmarkup.c (g_markup_parse_context_get_element): New
	function to get the currently open element.  (#70448)

2002-07-04  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* tests/*.c: Added #undef G_DISABLE_ASSERT and #undef G_LOG_DOMAIN
	throughout the files, which didn't already have them. (#87312)
